[package]
name = "tower"
version = "0.4.13"
edition = "2018"

[features]


[dependencies]
futures-core = { version = "0.3" }
futures-util = { version = "0.3", default-features = false, features = [
  "alloc",
] }
rand = { version = "0.8", features = ["small_rng"] }
slab = { version = "0.4" }
tokio = { version = "1.6", features = ["sync", "time"] }
tokio-stream = { version = "0.1.0" }
tokio-util = { version = "0.7.0", default-features = false }
